force-app/main/default/objects/Collection_Op_Update_Event__e/Collection_Op_Update_Event__e.object-meta.xml
<CustomObject>
    <label>Collection Op Update Event</label>
    <pluralLabel>Collection Op Update Events</pluralLabel>
</CustomObject>