force-app/main/default/objects/Collection_Op_Update_Event__e/fields/Collection_Operation_Id__c.field-meta.xml
<CustomField>
    <fullName>Collection_Operation_Id__c</fullName>
    <label>Collection Operation Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>