force-app/main/default/objects/Collection_Op_Update_Event__e/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>